--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 
 <h1>Welcome to my hobby website</h1>
   <h2>About Me</h2>
+  <p> Hello my name is Laura. I like horses and dogs, english music and fashion, and nature and animals</p>
+  
   <h2>My hobby</h2>
-  <h2>Community</h2>
+  <p>My hobby is to sleep, have fun with friends and family</p>
+  
+<h2>Community</h2>
+  <p>Come and join my community... Here we love mature and animals</p>
   
 <p>This is a paragraph.</p>
 
