--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Welcome to my hobby website</h1>
+<h1 style="color:purple;">Welcome to my hobby website</h1>
   <h2>About Me</h2>
   <p> Hello my name is Laura. I like horses and dogs, english music and fashion, and nature and animals</p>
   
